--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Segoe", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe", Tahoma, "Geneva", Verdana, sans-serif;
   background-color: #e9e1e1;
   display: grid;
   grid-template-columns: 25% auto;
