--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables";
 body {
-    font-family: "Segoe", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe", Tahoma, "Geneva", Verdana, sans-serif;
     background-color: $secondary-color;
     display: grid;
     grid-template-columns: 25% auto;
